fixes whitespace errors

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,12 +1,12 @@
 /* CSS declarations go here */
-body {color: #AAA; font-family: Vollkorn; font-size: 120%; line-height: 120%;  }
+body { color: #AAA; font-family: Vollkorn; font-size: 120%; line-height: 120%; }
 
-img {max-width: 100%; width: 100%; }
+img { max-width: 100%; width: 100%; }
 td { padding: 0.3em; color: #AAA;}
 tr {color: #AAA; border-bottom: 2px solid #FFDC00; border-top: 2px solid #FFDC00; border-collapse: collapse;}​
-th { color: #AAA; background-color: #f0f0f0; }
+th { color: #AAA; background-color: #F0F0F0; }
 table { margin: .5em auto .5em auto; }
-hr {border: none; border-top: 1px solid #FFDC00; width: 33%;}
+hr { border: none; border-top: 1px solid #FFDC00; width: 33%; }
 
 .fb-page { 
     margin-left: 35.2%;
